# popoca

./: Justfile  pyproject.toml
popoca/: app.py
popoca/utils/: __init__.py  global_vars.py
