[tool.poetry]
name = "popoca"
version = "0.0.1"
description = ""
authors = ["Felipe <104157442+justafewwords4@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
cv = "^1.0.0"
fake-useragent = "^1.1.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.scripts]
popoca = "popoca.app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
